[package]
name = "mina-vrf-rs"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
dotenv = "0.15.0"
env_logger = "0.5"
graphql_client = "0.9.0"
log = "0.4"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.6.0", features = [ "full" ] }

[[bin]]
name = "mina-vrf"
path = "src/bin/main.rs"