[package]
name = "mina-vrf-rs"
version = "0.1.0"
authors = [ "HAOYUatHZ <haoyu@protonmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
clap = { package = "clap-v3", version = "3.0.0-beta.1" }  # todo: replace with official v3 when it's released to crates.io
dotenv = "0.15.0"
env_logger = "0.5"
graphql_client = "0.9.0"
log = "0.4"
mina-graphql-rs = { git = "https://github.com/zkvalidator/mina-graphql-rs", branch = "main" }
num-bigint = "0.3.2"
bigdecimal = "0.2.0"
reqwest = { version = "0.11.3", features = [ "json", "blocking" ] }
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.6.0", features = [ "full" ] }
bs58 = { version = "0.4.0", features = [ "check" ] }
blake2b_simd = "0.5.11"
chrono = { version = "0.4", features = [ "serde" ] }

[[bin]]
name = "mina-vrf"
path = "src/bin/main.rs"
